Fix alignment on "This media does not contain any annotations." text

--- a/system/application/views/widgets/edit/content_selector.css
+++ b/system/application/views/widgets/edit/content_selector.css
@@ -245,3 +245,6 @@
     box-sizing: border-box;
     font-size: 1rem;
 }
+.modal-dialog .annotationSelection p.text-muted{
+	margin-top: 7px;
+}
